--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,24 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <group
         android:id="@+id/menu_top"
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/action_statistics"
+            android:id="@+id/home_dest"
+            android:icon="@drawable/outline_house_black_24"
+            android:title="@string/title_home"
+            android:orderInCategory="1"
+            app:showAsAction="ifRoom"/>
+
+        <item
+            android:id="@+id/theory_dest"
+            android:icon="@drawable/outline_local_library_black_24"
+            android:title="@string/title_theory"
+            android:orderInCategory="2"
+            app:showAsAction="ifRoom"/>
+
+        <item
+            android:id="@+id/exercise_dest"
+            android:icon="@drawable/outline_directions_run_black_24"
+            android:title="@string/title_exercises"
+            app:showAsAction="ifRoom"
+            android:orderInCategory="2"/>
+
+        <item
+            android:id="@+id/statistics_dest"
             android:icon="@drawable/outline_bar_chart_black_24"
-            android:orderInCategory="100"
+            android:orderInCategory="2"
+            app:showAsAction="ifRoom"
             android:title="@string/statistics" />
         <item
-            android:id="@+id/action_settings"
+            android:id="@+id/settings_dest"
             android:icon="@drawable/outline_settings_applications_24"
-            android:orderInCategory="100"
+            android:orderInCategory="2"
+            app:showAsAction="ifRoom"
             android:title="@string/settings" />
-        <item
-            android:id="@+id/action_notification"
-            android:icon="@drawable/outline_add_alert_24"
-            android:orderInCategory="100"
-            android:title="@string/notification" />
     </group>
 
 </menu>
