--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -9,7 +9,6 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:layout_marginTop="24dp"
         android:orientation="vertical"
         app:cardCornerRadius="8dp"
@@ -21,45 +20,56 @@
             android:layout_margin="4dp"
             android:orientation="vertical">
 
-            <!--TITLE AND POURCENTAGE-->
+            <!--TITLE AND PERCENTAGE-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_margin="4dp"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
+                    <!--TITLE-->
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Exercises for computer users"
-                        android:textSize="16dp" />
+                        android:text="@string/exercises_for_computer_users"
+                        android:textSize="@dimen/text_size_title" />
 
+                    <!--DATE-->
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="01/12/2019" />
                 </LinearLayout>
 
-
-                <ImageView
-                    android:layout_width="match_parent"
+                <!--PROGRESSBAR-->
+                <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
+                    android:id="@+id/circular_progress"
+                    android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:src="@drawable/outline_play_circle_outline_24"
-                    android:textAlignment="textEnd" />
+                    android:layout_gravity="center"
+                    app:direction="clockwise"
+                    app:drawDot="false"
+                    app:progressBackgroundColor="@color/grey"
+                    app:progressBackgroundStrokeWidth="8dp"
+                    app:progressColor="@color/colorPrimaryDark"
+                    app:progressStrokeWidth="8dp"
+                    app:textColor="@color/colorPrimaryDark"
+                    app:textSize="@dimen/text_size_title" />
             </LinearLayout>
-
 
             <ImageView
                 android:id="@+id/desk_exercises_image"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="104dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:contentDescription="desk exercises"
+                android:contentDescription="@string/exercises_for_computer_users"
                 android:scaleType="centerCrop"
                 android:src="@drawable/exo" />
         </LinearLayout>
