--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment">
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/welcome_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="56dp"
+        android:text="@string/welcome_back"
         android:textAlignment="center"
-        android:textSize="24dp"
-        android:text="Welcome back!"
-        />
+        android:textSize="@dimen/title_big" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:layout_marginBottom="4dp"
-        android:textStyle="bold"
-        android:text="CURRENT PROGRAM"/>
+        android:layout_margin="4dp"
+        android:text="@string/current_program"
+        android:textStyle="bold" />
 
 
     <FrameLayout
@@ -41,7 +40,7 @@
                 android:id="@+id/program"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="actual program"
+                android:contentDescription="@string/current_program"
                 android:scaleType="centerCrop"
                 android:src="@drawable/exo" />
         </androidx.cardview.widget.CardView>
@@ -50,7 +49,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:src="@drawable/outline_play_circle_outline_black_48"/>
+            android:contentDescription="@string/start_btn"
+            android:src="@drawable/outline_play_circle_outline_black_48" />
     </FrameLayout>
 
 </LinearLayout>
