--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -21,7 +21,7 @@
         android:icon="@drawable/outline_directions_run_black_24"
         android:orderInCategory="2"
         android:title="@string/title_exercises"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/statistics_dest"
         android:icon="@drawable/outline_bar_chart_black_24"
@@ -33,6 +33,6 @@
         android:icon="@drawable/outline_settings_applications_24"
         android:orderInCategory="2"
         android:title="@string/settings"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom"/>
 
 </menu>
