--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0461B3</color>
-    <color name="colorPrimaryDark">#78B1DF</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#78B1DF</color>
+    <color name="colorPrimaryDark">#0461B3</color>
+    <color name="colorAccent">#78B1DF</color>
     <color name="white">#FFFFFF</color>
+    <color name="grey">#A4A4A5</color>
+    <color name="light_grey">#E5E5E7</color>
 </resources>
