--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,22 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="56dp"
-        android:text="@string/welcome_back"
+        android:text="@string/welcome"
         android:textAlignment="center"
         android:textSize="@dimen/title_big" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:text="@string/current_program"
-        android:textStyle="bold" />
-
 
     <FrameLayout
+        android:id="@+id/home_fragment_user"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:visibility="gone">
+
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -43,6 +39,13 @@
                 android:contentDescription="@string/current_program"
                 android:scaleType="centerCrop"
                 android:src="@drawable/exo" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:text="@string/current_program"
+                android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
         <ImageView
@@ -53,4 +56,46 @@
             android:src="@drawable/outline_play_circle_outline_black_48" />
     </FrameLayout>
 
+
+    <!--SHOWS FIRST TIME USER-->
+    <LinearLayout
+        android:id="@+id/home_fragment_first_time_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical">
+
+        <!-- USER NAME-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/user_name">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/user_name_text_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textAutoCorrect|textCapSentences" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <!--BUTTON-->
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_save"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="8dp"
+            android:padding="4dp"
+            android:text="@string/save"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
+    </LinearLayout>
 </LinearLayout>
