--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -11,11 +11,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/profile"
         android:textSize="@dimen/title_big" />
 
-    <!--FIRST NAME-->
+    <!-- USER NAME-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,42 +26,33 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/first_name">
+            android:hint="@string/user_name">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/first_name_text_input"
+                android:id="@+id/user_name_text_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textAutoCorrect|textCapSentences" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
-    <!-- LAST NAME-->
-    <LinearLayout
+    <!--BUTTON-->
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_save"
+        style="@style/Widget.MaterialComponents.Button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/last_name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/last_name_text_input"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textAutoCorrect|textCapSentences" />
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
+        android:layout_height="48dp"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="4dp"
+        android:padding="4dp"
+        android:text="@string/update"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="48dp"
-        android:background="@android:color/darker_gray" />
+        android:layout_marginTop="16dp"
+        android:background="@color/light_grey" />
 
     <!-- ACTIVATE REMINDER-->
     <LinearLayout
@@ -72,7 +64,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/daily_reminder" />
+            android:text="@string/daily_reminder"
+            android:textSize="@dimen/text_size_title" />
 
         <Switch
             android:id="@+id/notification_switch"
