--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,21 +8,21 @@
         <item
             android:id="@+id/home_dest"
             android:icon="@drawable/outline_house_black_24"
-            android:title="@string/title_home"
+            android:title="@string/home"
             android:orderInCategory="1"
             app:showAsAction="ifRoom"/>
 
         <item
             android:id="@+id/theory_dest"
             android:icon="@drawable/outline_local_library_black_24"
-            android:title="@string/title_theory"
+            android:title="@string/theory"
             android:orderInCategory="2"
             app:showAsAction="ifRoom"/>
 
         <item
             android:id="@+id/exercise_dest"
             android:icon="@drawable/outline_directions_run_black_24"
-            android:title="@string/title_exercises"
+            android:title="@string/exercises"
             app:showAsAction="ifRoom"
             android:orderInCategory="2"/>
 
