--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:orientation="vertical"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
@@ -42,7 +42,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/exercises_for_computer_users"
-                        android:textSize="@dimen/text_size_title" />
+                        android:textSize="@dimen/title_big" />
 
                     <!--DATE-->
                     <TextView
