added view model to home fragment implemented methods for clickable items and choice of layout in home fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     app:tabMode="scrollable"
-    tools:context=".MainActivity">
+    tools:context=".controllers.MainActivity">
 
     <include layout="@layout/toolbar" />
 
