--- a/app/src/main/res/layout-w960dp/activity_main.xml
+++ b/app/src/main/res/layout-w960dp/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     app:tabMode="scrollable"
-    tools:context=".MainActivity">
+    tools:context=".controllers.MainActivity">
 
 
     <include
