--- a/app/src/main/res/layout/fragment_computer_exercise.xml
+++ b/app/src/main/res/layout/fragment_computer_exercise.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".ComputerExerciseFragment">
+    tools:context=".controllers.ComputerExerciseFragment">
 
     <!--Navigation exercises-->
     <LinearLayout
