--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ExerciseFragment">
+    tools:context=".controllers.ExerciseFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/exercise_card_view"
