--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_margin="4dp"
     android:orientation="vertical"
-    tools:context=".SettingsFragment">
+    tools:context=".controllers.SettingsFragment">
 
     <!--PROFILE-->
     <TextView
