--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="4dp"
     android:orientation="vertical"
-    tools:context=".StatisticsFragment">
+    tools:context=".controllers.StatisticsFragment">
 
     <TextView
         android:layout_width="match_parent"
