--- a/app/src/main/res/layout/fragment_theory.xml
+++ b/app/src/main/res/layout/fragment_theory.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="4dp"
-    tools:context=".TheoryFragment">
+    tools:context=".controllers.TheoryFragment">
 
     <TextView
         android:layout_width="match_parent"
