--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/home_dest"
-        android:name="com.oc.liza.kinedepoche.HomeFragment"
+        android:name="com.oc.liza.kinedepoche.controllers.HomeFragment"
         android:label="@string/home"
         tools:layout="@layout/fragment_home">
         <action
@@ -21,13 +21,13 @@
 
     <fragment
         android:id="@+id/theory_dest"
-        android:name="com.oc.liza.kinedepoche.TheoryFragment"
+        android:name="com.oc.liza.kinedepoche.controllers.TheoryFragment"
         android:label="@string/theory"
         tools:layout="@layout/fragment_theory" />
 
     <fragment
         android:id="@+id/exercise_dest"
-        android:name="com.oc.liza.kinedepoche.ExerciseFragment"
+        android:name="com.oc.liza.kinedepoche.controllers.ExerciseFragment"
         android:label="@string/exercises"
         tools:layout="@layout/fragment_exercise">
         <action
@@ -45,19 +45,19 @@
 
     <fragment
         android:id="@+id/settings_dest"
-        android:name="com.oc.liza.kinedepoche.SettingsFragment"
+        android:name="com.oc.liza.kinedepoche.controllers.SettingsFragment"
         android:label="@string/settings"
         tools:layout="@layout/fragment_settings" />
 
     <fragment
         android:id="@+id/statistics_dest"
-        android:name="com.oc.liza.kinedepoche.StatisticsFragment"
+        android:name="com.oc.liza.kinedepoche.controllers.StatisticsFragment"
         android:label="@string/statistics"
         tools:layout="@layout/fragment_statistics" />
 
     <fragment
         android:id="@+id/computer_exercise_dest"
-        android:name="com.oc.liza.kinedepoche.ComputerExerciseFragment"
+        android:name="com.oc.liza.kinedepoche.controllers.ComputerExerciseFragment"
         android:label="@string/comp_exercise"
         tools:layout="@layout/fragment_computer_exercise" >
     <argument
