created test for utils using view model in exercise fragment to set progress for user showing current date

--- a/app/src/main/res/layout/fragment_computer_exercise.xml
+++ b/app/src/main/res/layout/fragment_computer_exercise.xml
@@ -68,6 +68,7 @@
     <!--PROGRESSBAR-->
     <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
         android:id="@+id/circular_progress"
+        android:visibility="gone"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="center"
