--- a/app/src/main/res/values/exercise_arrays.xml
+++ b/app/src/main/res/values/exercise_arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="video_url_array">
-        <item>video1</item>
+        <item>R.raw.test</item>
         <item>video2</item>
         <item>video3</item>
         <item>video4</item>
