--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,17 +37,21 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
-        <argument
-            android:name="program"
-            app:argType="integer"
-            android:defaultValue="1"/>
     </fragment>
 
     <fragment
         android:id="@+id/settings_dest"
         android:name="com.oc.liza.kinedepoche.controllers.SettingsFragment"
         android:label="@string/settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings">
+        <action
+            android:id="@+id/next_action"
+            app:destination="@+id/home_dest"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
 
     <fragment
         android:id="@+id/statistics_dest"
@@ -59,11 +63,11 @@
         android:id="@+id/computer_exercise_dest"
         android:name="com.oc.liza.kinedepoche.controllers.ComputerExerciseFragment"
         android:label="@string/comp_exercise"
-        tools:layout="@layout/fragment_computer_exercise" >
-    <argument
-        android:name="program"
-        app:argType="string"
-        android:defaultValue="1"/>
+        tools:layout="@layout/fragment_computer_exercise">
+        <argument
+            android:name="program"
+            android:defaultValue="1"
+            app:argType="string" />
     </fragment>
 
 </navigation>
