--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".controllers.ExerciseFragment">
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/exercise_card_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_marginTop="12dp"
+        android:layout_weight="1"
         android:orientation="vertical"
         app:cardCornerRadius="8dp"
-        app:cardElevation="0dp"
-        >
+        app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,8 +50,8 @@
                         android:id="@+id/date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="01/12/2019" />
+                        android:text="01/12/2019"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <!--PROGRESSBAR-->
@@ -69,39 +70,52 @@
                     app:textSize="@dimen/text_size_title" />
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/desk_exercises_image"
+            <FrameLayout
+                android:id="@+id/home_fragment_user"
                 android:layout_width="match_parent"
-                android:layout_height="104dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:contentDescription="@string/exercises_for_computer_users"
-                android:scaleType="centerCrop"
-                android:src="@drawable/exo" />
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/desk_exercises_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_184sdp"
+                    android:layout_marginBottom="16dp"
+                    android:contentDescription="@string/exercises_for_computer_users"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/photo_computer" />
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/start_btn"
+                    android:src="@drawable/outline_play_circle_outline_black_48" />
+            </FrameLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 
     <LinearLayout
         android:id="@+id/trophy"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:orientation="vertical"
         android:layout_marginTop="16dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
         android:visibility="gone">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="208dp"
-        android:src="@drawable/trophy"
-        android:contentDescription="@string/trophy" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="208dp"
+            android:contentDescription="@string/trophy"
+            android:src="@drawable/trophy" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/title_big"
             android:gravity="center"
-            android:text="God job!\n You did all your exercises today!"/>
+            android:text="God job!\n You did all your exercises today!"
+            android:textSize="@dimen/title_big" />
 
     </LinearLayout>
 </LinearLayout>
