--- a/app/src/main/res/layout/timer_layout.xml
+++ b/app/src/main/res/layout/timer_layout.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -13,94 +14,106 @@
         app:cardElevation="0dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="4dp"
-            android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <!--TIMER-->
-            <ImageView
-                android:id="@+id/ic_timer"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:contentDescription="@string/timer"
-                android:scaleType="centerCrop"
-                android:src="@drawable/outline_timer_black_24" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
 
-            <TextView
-                android:id="@+id/timer_text"
+                android:orientation="horizontal">
+
+                <!--TIMER-->
+                <ImageView
+                    android:id="@+id/ic_timer"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/timer"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/outline_timer_black_24" />
+
+                <TextView
+                    android:id="@+id/timer_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="40 s"
+                    android:textSize="@dimen/text_size_title" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="32dp"
+                    android:layout_margin="8dp"
+                    android:background="@android:color/darker_gray" />
+
+                <!--PAUSE-->
+                <ImageView
+                    android:id="@+id/ic_pause"
+                    android:layout_width="@dimen/_48sdp"
+                    android:layout_height="@dimen/_48sdp"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/pause"
+                    android:tint="@color/colorPrimary"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/outline_play_circle_outline_24" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="32dp"
+                    android:layout_margin="8dp"
+                    android:background="@android:color/darker_gray" />
+
+                <!--REPEAT-->
+                <ImageView
+                    android:id="@+id/ic_repeat"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/repeat"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/outline_refresh_black_24" />
+
+                <TextView
+                    android:id="@+id/repeat_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="2x"
+                    android:textSize="@dimen/text_size_title" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="40 s"
-                android:textSize="@dimen/text_size_title" />
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_4sdp"
+                android:orientation="horizontal">
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="32dp"
-                android:layout_margin="8dp"
-                android:background="@android:color/darker_gray" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textAlignment="center"/>
 
-            <!--PAUSE-->
-            <ImageView
-                android:id="@+id/ic_pause"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:contentDescription="@string/pause"
-                android:scaleType="centerCrop"
-                android:src="@drawable/outline_pause_circle_outline_black_24" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="32dp"
-                android:layout_margin="8dp"
-                android:background="@android:color/darker_gray" />
-
-            <!--REPEAT-->
-            <ImageView
-                android:id="@+id/ic_repeat"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:contentDescription="@string/repeat"
-                android:scaleType="centerCrop"
-                android:src="@drawable/outline_refresh_black_24" />
-
-            <TextView
-                android:id="@+id/repeat_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="2x"
-                android:textSize="@dimen/text_size_title" />
-
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="bottom"
+                    android:layout_margin="@dimen/_8sdp"
+                    android:minWidth="220dp"
+                    android:minHeight="60dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_100sdp"
+                    android:text="30s"
+                    android:textAlignment="center"/>
+            </LinearLayout>
         </LinearLayout>
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/_24ssp"
-            android:visibility="gone"
-            android:minHeight="60dp"
-            android:minWidth="220dp" />
-
-        <!--BUTTON-->
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_start"
-            style="@style/Widget.MaterialComponents.Button"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_gravity="bottom"
-            android:layout_margin="4dp"
-            android:layout_marginTop="60dp"
-            android:padding="4dp"
-            android:text="@string/start_btn"
-            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
     </androidx.cardview.widget.CardView>
+
 </FrameLayout>
