--- a/app/src/main/res/layout/timer_layout.xml
+++ b/app/src/main/res/layout/timer_layout.xml
@@ -94,6 +94,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
                     android:text="0"
                     android:textAlignment="center"/>
 
@@ -108,9 +109,11 @@
                     android:minWidth="220dp"
                     android:minHeight="60dp" />
                 <TextView
+                    android:id="@+id/progressbar_time"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_100sdp"
                     android:text="30s"
+                    android:layout_marginEnd="@dimen/_4sdp"
                     android:textAlignment="center"/>
             </LinearLayout>
         </LinearLayout>
