--- a/app/src/main/res/layout/fragment_computer_exercise.xml
+++ b/app/src/main/res/layout/fragment_computer_exercise.xml
@@ -47,40 +47,56 @@
             android:src="@drawable/ic_right" />
     </LinearLayout>
 
-
     <!--VIDEO VIEW-->
-    <VideoView
-        android:id="@+id/exercise_video_view"
+    <FrameLayout
+        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_200sdp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/navigation_layout"
-        />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/navigation_layout">
+        <VideoView
+            android:id="@+id/exercise_video_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
     <!--DESCRIPTION EXERCISE-->
     <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/exercise_video_view"
+        android:layout_below="@id/navigation_layout"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/description_exercise"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="@dimen/_24ssp"
-            android:text="DESCRIPTION EXERCISES" />
+<FrameLayout
+    android:id="@+id/description_frame_layout"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:layout_marginBottom="@dimen/_16sdp"
+    android:layout_marginTop="@dimen/_16sdp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:alpha="0.4"
+        />
+    <TextView
+        android:id="@+id/description_exercise"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="@dimen/_24ssp"
+        android:text="DESCRIPTION EXERCISES" />
+</FrameLayout>
+
 
         <!--TIMER LAYOUT-->
         <include
             layout="@layout/timer_layout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_100sdp"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/description_exercise"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_4sdp"
             />
     </LinearLayout>
 </RelativeLayout>
