--- a/app/src/main/res/layout/timer_layout.xml
+++ b/app/src/main/res/layout/timer_layout.xml
@@ -8,8 +8,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:orientation="vertical"
         app:cardBackgroundColor="@color/light_grey"
+        android:orientation="vertical"
         app:cardCornerRadius="18dp"
         app:cardElevation="0dp">
 
@@ -22,7 +22,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-
                 android:orientation="horizontal">
 
                 <!--TIMER-->
@@ -56,9 +55,9 @@
                     android:layout_height="@dimen/_48sdp"
                     android:layout_gravity="center"
                     android:contentDescription="@string/pause"
-                    android:tint="@color/colorPrimary"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/outline_play_circle_outline_24" />
+                    android:src="@drawable/outline_play_circle_outline_24"
+                    android:tint="@color/colorPrimary" />
 
                 <View
                     android:layout_width="1dp"
@@ -96,25 +95,26 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:text="0"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center" />
 
                 <ProgressBar
                     android:id="@+id/progressBar"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_gravity="bottom"
                     android:layout_margin="@dimen/_8sdp"
+                    android:layout_weight="1"
                     android:minWidth="220dp"
                     android:minHeight="60dp" />
+
                 <TextView
                     android:id="@+id/progressbar_time"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_100sdp"
-                    android:text="30s"
                     android:layout_marginEnd="@dimen/_4sdp"
-                    android:textAlignment="center"/>
+                    android:text="30s"
+                    android:textAlignment="center" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
