updated exercise layout

--- a/app/src/main/res/layout/fragment_theory.xml
+++ b/app/src/main/res/layout/fragment_theory.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_margin="4dp"
+    android:orientation="vertical"
     tools:context=".controllers.TheoryFragment">
 
     <TextView
@@ -18,21 +18,22 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Musculoskeletal symptoms are quite common, headache and back pain being most common symptoms.
-        These symptoms are associated with prolonged use of computer and internet and often left unreported and unrelated.
-        association between computer work per se and tension neck syndrome. ."/>
+        android:text="Prolonged use of computer or activities with similar position such as driving often give rise to
+      musculoskeletal symptoms. Headache and back pain are the most common symptoms. The back can easily support the weight of your head and neck
+      when your posture is tall and erect, but if your head leans forward in a 45 degree angle, your neck has to work like a lever lifting a heavy object.
+Muscles need movement, contraction and relaxation in order to be free from tension and well vascularized." />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="How?"
         android:textSize="@dimen/title_big"
-        android:layout_marginTop="16dp"
         android:textStyle="bold" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Take breaks every hour and do the exercises to release tensions and give oxygen to the muscles"/>
+        android:text="Take breaks every hour and do the exercises to release tensions and give oxygen to the muscles" />
 
 </LinearLayout>
