--- a/app/src/main/res/layout/fragment_computer_exercise.xml
+++ b/app/src/main/res/layout/fragment_computer_exercise.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,44 +9,50 @@
     tools:context=".controllers.ComputerExerciseFragment">
 
     <!--Navigation exercises-->
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:id="@+id/navigation_layout"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/colorPrimary"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        app:cardElevation="@dimen/_8sdp">
 
-        <ImageView
-            android:id="@+id/ic_left"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center"
-            android:clickable="true"
-            android:contentDescription="@string/icon_left"
-            android:focusable="true"
-            android:src="@drawable/ic_left" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/exercise_number"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="@string/exercise_1_of_4"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_title" />
+            <ImageView
+                android:id="@+id/ic_left"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:contentDescription="@string/icon_left"
+                android:focusable="true"
+                android:src="@drawable/ic_left" />
 
-        <ImageView
-            android:id="@+id/ic_right"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center"
-            android:clickable="true"
-            android:contentDescription="@string/icon_right"
-            android:focusable="true"
-            android:src="@drawable/ic_right" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/exercise_number"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="@string/exercise_1_of_4"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_title" />
+
+            <ImageView
+                android:id="@+id/ic_right"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:contentDescription="@string/icon_right"
+                android:focusable="true"
+                android:src="@drawable/ic_right" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <!--VIDEO VIEW-->
     <FrameLayout
@@ -53,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/navigation_layout">
+
         <VideoView
             android:id="@+id/exercise_video_view"
             android:layout_width="match_parent"
@@ -66,29 +74,70 @@
         android:layout_height="match_parent"
         android:layout_below="@id/navigation_layout"
         android:orientation="vertical">
-<FrameLayout
-    android:id="@+id/description_frame_layout"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:layout_marginBottom="@dimen/_16sdp"
-    android:layout_marginTop="@dimen/_16sdp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:alpha="0.4"
-        />
-    <TextView
-        android:id="@+id/description_exercise"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="@dimen/_24ssp"
-        android:text="DESCRIPTION EXERCISES" />
-</FrameLayout>
+        <FrameLayout
+            android:id="@+id/description_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="@dimen/_4sdp"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0.6"
+                android:background="@color/white" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/_8sdp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/description_exercise"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginBottom="@dimen/_24ssp"
+                    android:textSize="@dimen/_16sdp"
+                    android:textStyle="bold" />
+
+                <!--TIMER-->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/ic_timer"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:contentDescription="@string/timer"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/outline_timer_black_24" />
+
+                    <TextView
+                        android:id="@+id/timer_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_24ssp"
+                        android:gravity="center"
+                        android:textSize="@dimen/text_size_title"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <!--DONE TEXT-->
+                <TextView
+                    android:id="@+id/done_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:text="@string/done"
+                    android:textSize="@dimen/_16sdp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </FrameLayout>
 
 
         <!--TIMER LAYOUT-->
@@ -96,7 +145,6 @@
             layout="@layout/timer_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_4sdp"
-            />
+            android:layout_marginBottom="@dimen/_4sdp" />
     </LinearLayout>
 </RelativeLayout>
