--- a/app/src/main/res/layout/fragment_computer_exercise.xml
+++ b/app/src/main/res/layout/fragment_computer_exercise.xml
@@ -106,7 +106,7 @@
 
                 <!--TIMER-->
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
@@ -122,7 +122,8 @@
                         android:id="@+id/timer_text"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_24ssp"
-                        android:gravity="center"
+                        android:gravity="center|start"
+                        android:text="time"
                         android:textSize="@dimen/text_size_title"
                         android:textStyle="bold" />
                 </LinearLayout>
