--- a/app/src/main/res/layout-w600dp/activity_profile.xml
+++ b/app/src/main/res/layout-w600dp/activity_profile.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     app:tabMode="scrollable"
     tools:context=".controllers.ProfileActivity">
@@ -12,6 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <include
