--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -8,104 +8,104 @@
     android:orientation="vertical"
     tools:context=".controllers.ExerciseFragment">
 
-        <!--TITLE AND PERCENTAGE-->
+    <!--TITLE AND PERCENTAGE-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_4sdp"
+        android:orientation="horizontal">
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="@dimen/_4sdp">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <!--TITLE-->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/exercises_for_computer_users"
-                    android:textSize="@dimen/title_big" />
-
-                <!--DATE-->
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="01/12/2019"
-                    android:textSize="@dimen/text_size_title"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <!--PROGRESSBAR-->
-            <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
-                android:id="@+id/circular_progress"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                app:direction="clockwise"
-                app:drawDot="false"
-                app:progressBackgroundColor="@color/grey"
-                app:progressBackgroundStrokeWidth="8dp"
-                app:progressColor="@color/colorPrimaryDark"
-                app:progressStrokeWidth="8dp"
-                app:textColor="@color/colorPrimaryDark"
-                app:textSize="@dimen/text_size_title" />
-        </LinearLayout>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/exercise_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="vertical"
-            app:cardCornerRadius="@dimen/_18sdp"
-            app:cardElevation="0dp">
-
-            <FrameLayout
-                android:id="@+id/home_fragment_user"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_4sdp">
-
-                <ImageView
-                    android:id="@+id/desk_exercises_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_184sdp"
-                    android:contentDescription="@string/exercises_for_computer_users"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/photo_computer" />
-
-                <ImageView
-                    android:layout_width="@dimen/_48sdp"
-                    android:layout_height="@dimen/_48sdp"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/start_btn"
-                    android:src="@drawable/outline_play_circle_outline_black_48" />
-            </FrameLayout>
-        </androidx.cardview.widget.CardView>
-
-        <!--TROPHY LAYOUT ONLY SHOWING WHEN COMPLETED ALL EXERCISES-->
-        <LinearLayout
-            android:id="@+id/trophy"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="208dp"
-                android:contentDescription="@string/trophy"
-                android:src="@drawable/trophy" />
-
+            <!--TITLE-->
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/exercises_for_computer_users"
+                android:textSize="@dimen/title_big" />
+
+            <!--DATE-->
+            <TextView
+                android:id="@+id/date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="God job!\n You did all your exercises today!"
-                android:textSize="@dimen/title_big" />
+                android:textSize="@dimen/text_size_title"
+                android:textStyle="bold" />
         </LinearLayout>
+
+        <!--PROGRESSBAR-->
+        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
+            android:id="@+id/circular_progress"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            app:direction="clockwise"
+            app:drawDot="false"
+            app:progressBackgroundColor="@color/grey"
+            app:progressBackgroundStrokeWidth="8dp"
+            app:progressColor="@color/colorPrimaryDark"
+            app:progressStrokeWidth="8dp"
+            app:textColor="@color/colorPrimaryDark"
+            app:textSize="@dimen/text_size_title" />
     </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/exercise_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:cardCornerRadius="@dimen/_18sdp"
+        app:cardElevation="0dp">
+
+        <FrameLayout
+            android:id="@+id/home_fragment_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_4sdp">
+
+            <ImageView
+                android:id="@+id/desk_exercises_image"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_184sdp"
+                android:contentDescription="@string/exercises_for_computer_users"
+                android:scaleType="centerCrop"
+                android:src="@drawable/photo_computer" />
+
+            <ImageView
+                android:layout_width="@dimen/_48sdp"
+                android:layout_height="@dimen/_48sdp"
+                android:layout_gravity="center"
+                android:contentDescription="@string/start_btn"
+                android:src="@drawable/outline_play_circle_outline_black_48" />
+        </FrameLayout>
+    </androidx.cardview.widget.CardView>
+
+    <!--TROPHY LAYOUT ONLY SHOWING WHEN COMPLETED ALL EXERCISES-->
+    <LinearLayout
+        android:id="@+id/trophy"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_weight="1"
+        android:visibility="gone"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="208dp"
+            android:contentDescription="@string/trophy"
+            android:src="@drawable/trophy" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/trophy_text"
+            android:textSize="@dimen/title_big" />
+    </LinearLayout>
+</LinearLayout>
